--- a/build.gradle
+++ b/build.gradle
@@ -17,36 +17,27 @@ repositories {
 }
 
 dependencies {
-    // Dropwizard dependencies
+    // Dropwizard
     implementation(
             "io.dropwizard:dropwizard-core:$dropwizardVersion",
             "io.dropwizard:dropwizard-auth:$dropwizardVersion",
             "io.dropwizard:dropwizard-http2:$dropwizardVersion",
-            "io.dropwizard:dropwizard-hibernate:$dropwizardVersion",
-            "io.dropwizard:dropwizard-migrations:$dropwizardVersion",
-            "io.dropwizard:dropwizard-forms:$dropwizardVersion",
     )
 
-    // AWS related dependencies
+    // AWS
     implementation 'com.amazonaws:aws-java-sdk-sqs:1.12.186'
-    implementation 'software.amazon.awssdk:dynamodb-enhanced:2.17.157'
-    implementation 'org.opensearch.client:opensearch-java:2.1.0'
     implementation 'software.amazon.awssdk:apache-client:2.17.290'
     implementation 'software.amazon.awssdk:secretsmanager:2.17.145'
     implementation 'com.amazonaws:aws-java-sdk-s3:1.12.237'
 
-    // --- JJWT
-    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
-    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
-
-    // 3rd party dependencies
+    // 3rd party
     implementation 'ru.vyarus:dropwizard-guicey:5.4.2'
-    implementation 'com.vladmihalcea:hibernate-types-52:2.14.0'
     implementation 'org.reflections:reflections:0.10.2'
-    implementation 'at.favre.lib:bcrypt:0.9.0'
 
-    // Lombok dependencies
+    // ElasticSearch
+    implementation 'co.elastic.clients:elasticsearch-java:8.8.2'
+
+    // Lombok
     implementation 'org.projectlombok:lombok:1.18.22'
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
 
