Add implementation of file parsing, backfilling and es query

--- a/build.gradle
+++ b/build.gradle
@@ -41,8 +41,10 @@ dependencies {
     implementation 'org.projectlombok:lombok:1.18.22'
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
 
+    // Jackson modules
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.2'
 
+    // Test
     testImplementation "io.dropwizard:dropwizard-testing:$dropwizardVersion"
     testImplementation 'org.assertj:assertj-core:3.21.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
