--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ group 'com.hevo'
 version = '0.0.1'
 
 project.ext {
-    dropwizardVersion = '2.0.15'
+    dropwizardVersion = '2.0.35'
     mainClass = 'com.hevo.services.FileSearchServiceApplication'
 }
 
@@ -36,6 +36,14 @@ dependencies {
 
     // ElasticSearch
     implementation 'co.elastic.clients:elasticsearch-java:8.8.2'
+
+    // File parsing
+    implementation 'org.apache.poi:poi:5.2.3'
+    implementation 'org.apache.poi:poi-ooxml:5.2.3'
+    implementation ('org.apache.tika:tika-core:2.8.0') {
+        exclude group: 'org.slf4j', module: 'slf4j-api'
+    }
+    implementation 'org.apache.tika:tika-parser-pdf-module:2.8.0'
 
     // Lombok
     implementation 'org.projectlombok:lombok:1.18.22'
